Added Test Features

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SwerveDriveTest</name>
+	<name>Project-SDS</name>
 	<comment>Project SwerveDriveTest created by Buildship.</comment>
 	<projects>
 	</projects>
